# LLM_TsaeChienne

./: .gitignore  README.md  backend.py  backend_offers.py  chat.html  demo_agent.py  index.html  index_offers.html  output_example.txt  profile_agent.html  pyproject.toml  test_cv_chauffeur.txt  test_cv_maths_tech.txt  test_cv_menage.txt  test_resume.txt  wire.html
.claude/: settings.local.json
agents/: __init__.py  conversational_agent.py  profile_management_agent.py  profile_tools.py
data/: offers.db
scoring/: __init__.py  bonus_scoring_tool.py  deterministic_scoring_tool.py  models.py  score_explainer.py  scoring_agent.py  semantic_scoring_tool.py
scripts/: seed_offers.py
storage/: __init__.py  offers_db.py  profiles_db.py
tests/: test_all_cvs.py  test_api_detailed_score.py  test_bonus_contextualization.py  test_bonus_scoring.py  test_chauffeur_after_both_fixes.py  test_chauffeur_after_fix1.py  test_conversational_agent.py  test_deterministic_scoring.py  test_experience_relevance.py  test_extraction_fix.py  test_scoring_agent.py  test_semantic_scoring.py  test_skills_fix.py
