[project]
name = "llmops"
version = "0.1.0"
description = "AI-powered Resume to Job Matching Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
]
